--- a/Models/Speech_LLM/2023.05.16_SoundStorm.md
+++ b/Models/Speech_LLM/2023.05.16_SoundStorm.md
@@ -5,19 +5,19 @@
 
 - 标题: SoundStorm: Efficient Parallel Audio Generation
 - 作者:
-  - [Zalan Borsos](../../Authors/Zalan_Borsos.md)
-  - [Matt Sharifi](../../Authors/Matt_Sharifi.md)
-  - [Damien Vincent](../../Authors/Damien_Vincent.md)
-  - [Eugene Kharitonov](../../Authors/Eugene_Kharitonov.md)
-  - [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
-  - [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
+  - 01 [Zalan Borsos](../../Authors/Zalan_Borsos.md)
+  - 02 [Matt Sharifi](../../Authors/Matt_Sharifi.md)
+  - 03 [Damien Vincent](../../Authors/Damien_Vincent.md)
+  - 04 [Eugene Kharitonov](../../Authors/Eugene_Kharitonov.md)
+  - 05 [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
+  - 06 [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
 - 机构:
   - [Google Research](../../Institutions/Google.md)
 - 时间:
   - 预印时间: 2023.05.16 ArXiv v1
   - 更新笔记: 2024.06.13
 - 发表:
-  - 期刊/会议 
+  - ~~ICLR 2024 Reject~~
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2305.09636)
   - [DOI]()
@@ -33,16 +33,16 @@
 
 ## Abstract·摘要
 
-> We present SoundStorm, a model for efficient, non-autoregressive audio generation.
-> SoundStorm receives as input the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), and relies on bidirectional attention and confidence-based parallel decoding to generate the tokens of a neural audio codec.
+> We present ***SoundStorm***, a model for efficient, non-autoregressive audio generation.
+> ***SoundStorm*** receives as input the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), and relies on bidirectional attention and confidence-based parallel decoding to generate the tokens of a neural audio codec.
 > Compared to the autoregressive generation approach of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), our model produces audio of the same quality and with higher consistency in voice and acoustic conditions, while being two orders of magnitude faster.
-> SoundStorm generates 30 seconds of audio in 0.5 seconds on a TPU-v4.
+> ***SoundStorm*** generates 30 seconds of audio in 0.5 seconds on a TPU-v4.
 > We demonstrate the ability of our model to scale audio generation to longer sequences by synthesizing high-quality, natural dialogue segments, given a transcript annotated with speaker turns and a short prompt with the speakers’ voices.
 > Audio samples are available at https://google-research.github.io/seanet/soundstorm/examples/
 
-我们提出了 SoundStorm, 一个用于高效非自回归音频生成的模型.
-SoundStorm 以 AudioLM 的语义 token 作为输入, 并依赖于双向注意力和基于置信度的并行解码来生成神经音频编解码器的 token.
-与 AudioLM 的自回归生成方法相比, SoundStorm 能够生成相同质量的音频, 且在声音和声学条件下具有更高的一致性的同时, 速度快两个数量级.
+我们提出了 ***SoundStorm***, 一个用于高效非自回归音频生成的模型.
+***SoundStorm*** 以 AudioLM 的语义 token 作为输入, 并依赖于双向注意力和基于置信度的并行解码来生成神经音频编解码器的 token.
+与 AudioLM 的自回归生成方法相比, ***SoundStorm*** 能够生成相同质量的音频, 且在声音和声学条件下具有更高的一致性的同时, 速度快两个数量级.
 我们通过合成高质量, 自然对话片段来展示模型扩展音频生成更长序列的能力. 这些对话片段需要给定一个带有说话者转录脚本和一个带有说话人声音的简短提示.
 
 ## 1.Introduction·引言
@@ -87,36 +87,36 @@ SoundStorm 以 AudioLM 的语义 token 作为输入, 并依赖于双向注意力
 这引入了分层的标记结构，其中来自更精细RVQ级别的标记对感知质量的贡献较小，允许对标记序列的联合分布进行有效的因式分解和近似。
 因此，模型和解码方案应该考虑到输入的这种特殊结构，以便进行高效的训练和推理。
 
-> In this work, we present SoundStorm, a method for efficient and high-quality audio generation.
-> SoundStorm addresses the problem of generating long audio token sequences by relying on:
+> In this work, we present ***SoundStorm***, a method for efficient and high-quality audio generation.
+> ***SoundStorm*** addresses the problem of generating long audio token sequences by relying on:
 > 1. an architecture adapted to the hierarchical structure of the audio tokens,
 > 2. a parallel, non-autoregressive, confidence-based decoding scheme inspired by [MaskGIT (2022)]() for residual vector-quantized token sequences.
 
-我们提出了 SoundStorm, 一种用于高效高质量音频生成的方法.
-SoundStorm 通过以下方式解决生成长音频 token 序列问题:
+我们提出了 ***SoundStorm***, 一种用于高效高质量音频生成的方法.
+***SoundStorm*** 通过以下方式解决生成长音频 token 序列问题:
 1. 适用于音频 token 层次结构的架构;
 2. 用于残差矢量量化 token 序列的并行非自回归, 基于置信度解码方案.
 
-> SoundStorm relies on a bidirectional attention-based [Conformer (2020)]() that is trained to predict masked audio tokens produced by [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) given a condition-ing signal such as the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md).
+> ***SoundStorm*** relies on a bidirectional attention-based [Conformer (2020)]() that is trained to predict masked audio tokens produced by [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) given a condition-ing signal such as the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md).
 > On the input side, it sums up the embeddings of the tokens corresponding to the same [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) frame, such that the internal sequence length for the self-attention is identical to the number of [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) frames, and independent of the number of quantizers in the RVQ.
 > The output embeddings are then processed by separate heads per RVQ level to predict the masked target tokens.
-> At inference time, given the conditioning signal, SoundStorm starts with all audio tokens masked out, and fills in the masked tokens RVQ level-by-level over several iterations, predicting multiple tokens in parallel during a single iteration within a level.
+> At inference time, given the conditioning signal, ***SoundStorm*** starts with all audio tokens masked out, and fills in the masked tokens RVQ level-by-level over several iterations, predicting multiple tokens in parallel during a single iteration within a level.
 > To support this inference scheme, we propose a masking scheme for training that mimics the inference procedure.
 
-SoundStorm 依赖于一个基于双向注意力的Conformer（2020）, 该 Conformer 经过训练以预测由 SoundStream 生成的掩码音频标记, 给定一个条件信号, 例如 AudioLM（2022）的语义标记.
+***SoundStorm*** 依赖于一个基于双向注意力的Conformer（2020）, 该 Conformer 经过训练以预测由 SoundStream 生成的掩码音频标记, 给定一个条件信号, 例如 AudioLM（2022）的语义标记.
 在输入方面, 它将对应于同一 SoundStream 帧的标记的嵌入相加, 使得自注意力的内部序列长度与 SoundStream 帧的数量相同, 并且与 RVQ 中的量化器数量无关.
 然后输出嵌入由每个 RVQ 级别的单独头处理以预测掩码目标标记.
-在推理时间, 给定条件信号, SoundStorm 从所有音频标记都被掩码开始, 然后在几次迭代中逐级填充掩码标记, 在每个级别的一次迭代中并行预测多个标记.
+在推理时间, 给定条件信号, ***SoundStorm*** 从所有音频标记都被掩码开始, 然后在几次迭代中逐级填充掩码标记, 在每个级别的一次迭代中并行预测多个标记.
 为了支持这种推理方案, 我们提出了一种训练掩码方案, 该方案模仿推理过程.
 
-> We demonstrate that SoundStorm can serve as [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s acoustic generator, replacing both [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s stage two(coarse acoustic model) and stage three (fine acoustic model).
-> SoundStorm produces audio two orders of magnitude faster than [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s hierarchical autoregressive acoustic generator with matching quality and improved consistency in terms of speaker identity and acoustic conditions.
-> Furthermore, we show that SoundStorm, coupled with the text-to-semantic modeling stage of [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), can synthesize high-quality, natural dialogues, allowing one to control the spoken content(via transcripts), speaker voices (via short voice prompts)and speaker turns (via transcript annotations).
+> We demonstrate that ***SoundStorm*** can serve as [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s acoustic generator, replacing both [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s stage two(coarse acoustic model) and stage three (fine acoustic model).
+> ***SoundStorm*** produces audio two orders of magnitude faster than [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s hierarchical autoregressive acoustic generator with matching quality and improved consistency in terms of speaker identity and acoustic conditions.
+> Furthermore, we show that ***SoundStorm***, coupled with the text-to-semantic modeling stage of [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), can synthesize high-quality, natural dialogues, allowing one to control the spoken content(via transcripts), speaker voices (via short voice prompts)and speaker turns (via transcript annotations).
 > When synthesizing dialogues of 30 seconds, we measure a runtime of 2 seconds on a single [TPU-v4 (2023)]().
 
-我们展示了 SoundStorm 可以作为 AudioLM 的声学生成器, 取代 AudioLM 的第二阶段 (粗声学模型) 和第三阶段 (细声学模型)
-SoundStorm 生成的音频速度比 AudioLM 的分层自回归声学生成器快两个数量级, 同时保持相同质量和提高的语音和声学条件一致性.
-此外, 我们展示了 SoundStorm 与 SPEAR-TTS (2023) 的文本到语义建模阶段相结合, 可以合成高质量自然的对话, 允许通过脚本控制说话内容, 通过短语音提示控制说话者声音和通过脚本注释控制说话者轮次.
+我们展示了 ***SoundStorm*** 可以作为 AudioLM 的声学生成器, 取代 AudioLM 的第二阶段 (粗声学模型) 和第三阶段 (细声学模型)
+***SoundStorm*** 生成的音频速度比 AudioLM 的分层自回归声学生成器快两个数量级, 同时保持相同质量和提高的语音和声学条件一致性.
+此外, 我们展示了 ***SoundStorm*** 与 SPEAR-TTS (2023) 的文本到语义建模阶段相结合, 可以合成高质量自然的对话, 允许通过脚本控制说话内容, 通过短语音提示控制说话者声音和通过脚本注释控制说话者轮次.
 在合成 30 秒的对话时, 我们在单个 TPU-v4（2023）上测量的运行时间为 2 秒.
 
 ## 2.Related Works·相关工作
@@ -127,18 +127,18 @@ SoundStorm 生成的音频速度比 AudioLM 的分层自回归声学生成器快
 > Neural audio codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)]()), with their ability of reconstructing high-quality audio at very low bitrates, subsequently allowed for extending discrete modeling to audio signals as diverse as multi-speaker speech and piano ([AutoLM (2022)](); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), music ([MusicLM (2023)]()) or sound effects ([AudioGen (2022)]()).
 > In particular, [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) introduces a hierarchical sequence-to-sequence approach where high-level semantic tokens are generated as an intermediate representation, which is then used as a conditioning signal for predicting tokens of a [SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) codec.
 > While this hierarchical approach has demonstrated remarkable results for speech ([SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)) and music modeling ([MusicLM (2023)](); [SingSong (2023)]()), the computational cost of modeling flattened SoundStream tokens with self-attention scales quadratically with the sequence length and thus the bitrate of the neural codec, preventing these models from generating long-form audio with high quality.
-> SoundStorm alleviates this issue by modeling the multi-level tokens of the neural codec in parallel, inducing a two-order of magnitude speed-up over autoregressive modeling and unlocking the ability to scale audio generation abilities both in quality and in sequence length.
+> ***SoundStorm*** alleviates this issue by modeling the multi-level tokens of the neural codec in parallel, inducing a two-order of magnitude speed-up over autoregressive modeling and unlocking the ability to scale audio generation abilities both in quality and in sequence length.
 
 无监督语音嵌入提供了基础信号的低帧率表示, 在离散化后仍然保留足够丰富的信息, 使得语言模型从特定说话人处以一系列 token 的形式生成可理解的语音.
 神经音频编解码器, 由于它们能够在非常低比特率下重建高质量音频的能力, 允许将离散建模扩展到多说话人语音, 钢琴, 音乐或声效.
 特别是 AutoLM (2022) 引入了一种层次序列到序列方法, 高级别语义 token 作为中间表示, 之后作为条件信号用于预测 SoundStream 编解码器的 token.
 虽然这一层次方法已经在语音和音乐建模方面获得了显著成果, 但使用自注意力对扁平化 SoundStream token 进行建模的计算成本随着序列长度和神经编解码器的比特率呈二次增长, 从而阻止了这些模型生成高质量的长形式音频.
-SoundStorm 通过并行建模神经编解码器的多级别 token 来缓解这一问题, 与自回归建模相比速度提高了两个数量级, 并在质量和序列长度方面扩展音频生成能力.
+***SoundStorm*** 通过并行建模神经编解码器的多级别 token 来缓解这一问题, 与自回归建模相比速度提高了两个数量级, 并在质量和序列长度方面扩展音频生成能力.
 
 ### RVQ-Aware Architectures
 
 > A common design choice for modeling RVQ token sequences is to sum the embeddings corresponding to the same RVQ input embedding (frame) in order to reduce the sequence length.
-> Operating on such sequences, [AudioGen (2022)]() proposes a Transformer with $Q$ separate heads for the different RVQ levels, predicting the tokens for an RVQ frame in parallel.
+> Operating on such sequences, [AudioGen (2022)](../../Models/Speech_LLM/2022.09.30_AudioGen.md) proposes a Transformer with $Q$ separate heads for the different RVQ levels, predicting the tokens for an RVQ frame in parallel.
 > While providing a significant speedup for inference, the authors found that, for text-to-audio generation, this approach has an inferior performance compared to modeling the token sequence of a neural audio codec with similar bitrate and reconstruction quality, but with a single level of quantization.
 
 对于建模残差矢量量化 token 序列的常见设计是将对应同一个 RVQ 输入嵌入 (帧) 的嵌入相加以减少序列长度.
@@ -178,9 +178,9 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ## 3.Methodology·方法
 
-> SoundStorm receives as input a sequence of discrete tokens representing the conditioning signal and produces as output a sequence of SoundStream tokens, which can be decoded back to audio waveforms. We assume that the conditioning signal is time-aligned with the SoundStream frames or can be upsampled to the same rate. Such a conditioning signal is, for example, the semantic token sequence used in [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), or MusicLM, which makes our method a drop-in replacement for the acoustic generators of these models.
+> ***SoundStorm*** receives as input a sequence of discrete tokens representing the conditioning signal and produces as output a sequence of SoundStream tokens, which can be decoded back to audio waveforms. We assume that the conditioning signal is time-aligned with the SoundStream frames or can be upsampled to the same rate. Such a conditioning signal is, for example, the semantic token sequence used in [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), or MusicLM, which makes our method a drop-in replacement for the acoustic generators of these models.
 
-> We leave the extension to other types of conditioning signals via cross-attention or to unconditional sampling for future work, and focus our presentation of SoundStorm as the acoustic generator within [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), replacing both [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s coarse and fine acoustic modeling stages.
+> We leave the extension to other types of conditioning signals via cross-attention or to unconditional sampling for future work, and focus our presentation of ***SoundStorm*** as the acoustic generator within [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), replacing both [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s coarse and fine acoustic modeling stages.
 
 ### 3.1.网络架构
 
@@ -254,35 +254,35 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ## 6.Conclusions·结论
 
-> In this paper we present SoundStorm, a model that can synthesize high-quality audio from discrete conditioning tokens efficiently.
-> When compared to the acoustic generator of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), SoundStorm is two orders of magnitude faster and achieves higher temporal consistency when generating long audio samples.
-> By combining a text-to-semantic token model similar to [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md) with SoundStorm, we can scale text-to-speech synthesis to longer contexts and generate natural dialogues with multiple speaker turns, controlling both the voices of the speakers and the generated content.
+> In this paper we present ***SoundStorm***, a model that can synthesize high-quality audio from discrete conditioning tokens efficiently.
+> When compared to the acoustic generator of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), ***SoundStorm*** is two orders of magnitude faster and achieves higher temporal consistency when generating long audio samples.
+> By combining a text-to-semantic token model similar to [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md) with ***SoundStorm***, we can scale text-to-speech synthesis to longer contexts and generate natural dialogues with multiple speaker turns, controlling both the voices of the speakers and the generated content.
 
-本项工作提出了 SoundStorm, 一个可以高效地从离散条件 token 生成高质量音频的模型.
-和 AudioLM (2022) 的声学生成器相比, SoundStorm 运行速度快两个数量级, 且在生成长音频样本时获得更高的时序一致性.
+本项工作提出了 ***SoundStorm***, 一个可以高效地从离散条件 token 生成高质量音频的模型.
+和 AudioLM (2022) 的声学生成器相比, ***SoundStorm*** 运行速度快两个数量级, 且在生成长音频样本时获得更高的时序一致性.
 通过结合类似于 SPEAR-TTS (2023) 的文本到语义 token 模型, 能够将文本转语音合成扩展到更长内容和生成具有多个说话人轮次的自然对话, 同时控制说话人的声音和生成的内容.
 
 ## 7.Broader Impact·更广泛的影响
 
-> SoundStorm is a model for high-quality, efficient generation of neural audio codec-derived representations of audio.
+> ***SoundStorm*** is a model for high-quality, efficient generation of neural audio codec-derived representations of audio.
 > In this work, we use it as a replacement for the acoustic generation pipeline of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) and [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md).
 > We acknowledge that the audio samples produced by the model may be influenced by the biases present in the training data, for instance in terms of represented accents and voice characteristics.
 > In our generated samples, we demonstrate that we can reliably control speaker characteristics via prompting.
 > However, a more thorough analysis of any training data and its limitations would be an area of future work in line with our responsible AI principles.
 
-SoundStorm 是一个用于高质量, 高效生成神经音频编解码器导出音频表示的模型.
+***SoundStorm*** 是一个用于高质量, 高效生成神经音频编解码器导出音频表示的模型.
 我们将其作为 AudioLM (2022) 和 SPEAR-TTS (2023) 的声学生成管道的替代品.
 我们承认模型生成的音频样本可能会受到训练数据中偏差的影响, 例如在代表的口音和声音特征方面.
 在生成样本中, 我们展示了可以通过提示可靠地控制说话人特征.
 然而对于训练数据及其局限性进行更彻底地分析将是未来工作的一个领域, 与我们的负责任 AI 元组保持一致.
 
 > In turn, the ability to mimic a voice can have numerous malicious applications, including bypassing biometric identification and for the purpose of impersonation.
-> Thus, it is crucial to put in place safeguards against potential misuse: to this end, we have verified that the audio generated by SoundStorm remains detectable by a dedicated classifier (98.5%　using the same classifier as [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)).
-> Hence, as a component of a larger system, we believe that SoundStorm would be unlikely to introduce additional risks to those discussed previously by [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) and [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md).
+> Thus, it is crucial to put in place safeguards against potential misuse: to this end, we have verified that the audio generated by ***SoundStorm*** remains detectable by a dedicated classifier (98.5%　using the same classifier as [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)).
+> Hence, as a component of a larger system, we believe that ***SoundStorm*** would be unlikely to introduce additional risks to those discussed previously by [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) and [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md).
 > At the same time, relaxing the memory and computational requirements of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) would make research in the domain of audio generation more accessible to a wider community.
 > In the future, we plan to explore other approaches for detecting synthesized speech, e.g., audio watermarking, so that any potential product usage of this technology strictly follows our responsible AI principles.
 
 反过来, 模仿声音的能力可能有许多恶意应用, 包括绕过生物识别认证和用于冒充.
-因此, 必须采取措施防止潜在的滥用: 为此我们验证了 SoundStorm 生成的音频仍然可以被专用的分类器检测到 (AudioLM (2022) 相同 的分类器, 检测率为 98.5%). 因此作为更大系统的一部分, 我们认为 SoundStorm 不太可能引入由 AudioLM (2022) 和 SPEAR-TTS (2023) 讨论的额外风险.
+因此, 必须采取措施防止潜在的滥用: 为此我们验证了 ***SoundStorm*** 生成的音频仍然可以被专用的分类器检测到 (AudioLM (2022) 相同 的分类器, 检测率为 98.5%). 因此作为更大系统的一部分, 我们认为 ***SoundStorm*** 不太可能引入由 AudioLM (2022) 和 SPEAR-TTS (2023) 讨论的额外风险.
 同时, 放松 AudioLM (2022) 的内存和计算要求将使得音频生成领域的研究对更广泛社区更可访问.
 未来我们计划探索检测合成语音的其他方法, 例如音频水印, 以便任何潜在的产品使用这种技术严格遵循我们的负责任 AI 原则.
